# assembly-script

./: Cargo.toml  Makefile  README.md  test.S  user.html
.github/workflows/: test.yml
src/: instructions.rs  lib.rs  parser.rs  registers.rs
src/encoder/: encoder.rs
src/parser/: input.rs  instructions.rs  registers.rs
src/parser/testdata/: alphabet.S  alphabet.memeasm  generate.sh
src/testdata/: alphabet.S
src/vm/: vm.rs
