[package]
name = "x86-assembly-script"
version = "0.1.0"
authors = ["xarantolus <xarantolus@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
unescape = "0.1.0"
phf = { version = "0.10", features = ["macros"] }
regex = "1.5.6"
lazy_static = "1.4.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
iced-x86 = { version = "1.17.0", default-features = false, features = ["std", "encoder", "code_asm"] }
serde = {version = "1.0.137", features=["derive"] }
serde-wasm-bindgen = "0.4.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
